# cookiecutter-hipster-pypackage

./: .gitignore  README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.dist_name}}/: Makefile  README.md  mkdocs.yml  pyproject.toml  setup.cfg
{{cookiecutter.dist_name}}/.github/workflows/: build.yml  documentation.yml
{{cookiecutter.dist_name}}/.zed/: settings.json
{{cookiecutter.dist_name}}/docs/reference/: {{cookiecutter.package_name}}.md
{{cookiecutter.dist_name}}/tests/: conftest.py  test_add.py
{{cookiecutter.dist_name}}/{{cookiecutter.package_name}}/: __init__.py
